--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "post-update": "yarn upgrade --latest"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "bootstrap": "^5.2.3",
     "next": "^13",
+    "next-sanity": "^4.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
